refactored sql
